Changed App name

--- a/math_app_for_kids/app/src/main/res/layout/activity_main.xml
+++ b/math_app_for_kids/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,10 @@
     tools:context="nl.gerhardpegel.math_app_for_kids.MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="344dp"
+        android:layout_height="50dp"
+        android:text="Math App for Kids!"
+        tools:layout_editor_absoluteY="15dp"
+        tools:layout_editor_absoluteX="20dp" />
 
 </android.support.constraint.ConstraintLayout>
