--- a/math_app_for_kids/app/src/main/res/layout/activity_main.xml
+++ b/math_app_for_kids/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,82 @@
     android:layout_height="match_parent"
     tools:context="nl.gerhardpegel.math_app_for_kids.MainActivity">
 
-    <TextView
-        android:layout_width="344dp"
-        android:layout_height="50dp"
-        android:text="Math App for Kids!"
-        tools:layout_editor_absoluteY="15dp"
-        tools:layout_editor_absoluteX="20dp" />
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/app_back"
+        android:padding="10dp" >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center" >
+
+            <ImageView
+                android:id="@+id/operators"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/operators"
+                android:padding="5dp"
+                android:contentDescription="operators"/>
+
+            <TextView
+                android:id="@+id/intro"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/operators"
+                android:layout_centerHorizontal="true"
+                android:padding="20dp"
+                android:text="@string/app_name"
+                android:textColor="#ffffffff"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/play_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/intro"
+                android:layout_centerHorizontal="true"
+                android:layout_margin="5dp"
+                android:background="@drawable/enter_back"
+                android:padding="20dp"
+                android:text="Play"
+                android:textColor="#ff333333"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/help_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/play_btn"
+                android:layout_centerHorizontal="true"
+                android:layout_margin="5dp"
+                android:background="@drawable/enter_back"
+                android:padding="20dp"
+                android:text="How to Play"
+                android:textColor="#ff333333"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/high_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/help_btn"
+                android:layout_centerHorizontal="true"
+                android:layout_margin="5dp"
+                android:background="@drawable/enter_back"
+                android:padding="20dp"
+                android:text="High Scores"
+                android:textColor="#ff333333"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
