--- a/math_app_for_kids/app/src/main/res/layout/activity_main.xml
+++ b/math_app_for_kids/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,12 @@
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="368dp"
+        android:layout_height="495dp"
         android:background="@drawable/app_back"
-        android:padding="10dp" >
+        android:padding="10dp"
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
